--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "heroicons": "^1.0.4",
+    "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.3.3",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.8"
   }
 }
