--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "heroicons": "^1.0.4",
     "next": "^11.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
