--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "heroicons": "^1.0.4",
     "next": "^11.1.0",
     "react": "^17.0.2",
@@ -15,6 +16,8 @@
   "devDependencies": {
     "autoprefixer": "^10.3.3",
     "postcss": "^8.3.6",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.5",
     "tailwindcss": "^2.2.8"
   }
 }
