--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write \"{components,content,docs,pages,styles,utils}/**/*.{js,jsx,ts,tsx,css,scss,json,yaml,md}\"",
+    "format:check": "prettier --check '{components,content,docs,pages,styles,utils}/**/*.{js,jsx,ts,tsx,css,scss,json,yaml,md}'",
+    "lint": "eslint --fix '{components,pages,utils}/**/*.{js,jsx,ts,tsx}'",
+    "lint:check": "eslint '{components,pages,utils}/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
@@ -15,9 +19,21 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-react-require": "^3.1.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwind": "^0.2.0",
     "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.5",
+    "prettier": "^2.3.2",
     "tailwindcss": "^2.2.8"
   }
 }
