--- a/package.json
+++ b/package.json
@@ -11,29 +11,21 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
-    "heroicons": "^1.0.4",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.20",
     "autoprefixer": "^10.3.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-react-require": "^3.1.3",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.0.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwind": "^0.2.0",
     "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.5",
     "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.8"
+    "tailwindcss": "^2.2.8",
+    "typescript": "^4.4.3"
   }
 }
