--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/typography": "^0.4.1",
     "heroicons": "^1.0.4",
     "next": "^11.1.0",
-    "next-seo": "^4.27.0",
+    "next-pwa": "^5.3.1",
+    "next-seo": "^4.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
