--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@octokit/core": "^3.5.1",
     "@tailwindcss/typography": "^0.4.1",
+    "axios": "^0.22.0",
+    "csv-parse": "^4.16.3",
     "framer-motion": "^4.1.17",
     "heroicons": "^1.0.4",
     "next": "^11.1.2",
