--- a/.github/workflows/update_contributors.yml
+++ b/.github/workflows/update_contributors.yml
@@ -12,14 +12,12 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   ref: main
-            - uses: actions/setup-node@v2
+            - uses: denoland/setup-deno@v1
               with:
-                node-version: '14'
-                cache: npm
+                deno-version: 'v1.x'
             - name: Create local changes
               run: |
-                  npm install
-                  node scripts/update_contributors.js
+                  deno run -A scripts/update_contributors.js
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Commit files
