removed automatic contributors, changed style on 4c and contributors

--- a/.github/workflows/update_contributors.yml
+++ b/.github/workflows/update_contributors.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Create local changes
               run: |
                   npm install
-                  node scripts/update_contributors.js
+                #   node scripts/update_contributors.js
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Commit files
