--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@octokit/core": "^3.5.1",
-    "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.22.0",
     "csv-parse": "^4.16.3",
     "framer-motion": "^4.1.17",
@@ -27,7 +26,11 @@
     "react-toastify": "^8.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-require": "^3.1.3",
@@ -40,10 +43,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwind": "^0.2.1",
     "husky": "^7.0.2",
-    "postcss": "^8.3.8",
+    "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.6",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.16"
+    "tailwindcss": "^3.0.16"
   }
 }
