--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.1",
     "axios": "^0.22.0",
     "csv-parse": "^4.16.3",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "heroicons": "^1.0.4",
     "next": "^11.1.2",
@@ -24,7 +25,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-toastify": "^8.0.3"
+    "react-toastify": "^8.0.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
