--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-toastify": "^8.0.3",
+    "react-youtube": "^10.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
