--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "pre-commit": "npm run format && git add -A ."
   },
   "dependencies": {
+    "@discordjs/rest": "^1.3.0",
     "@octokit/core": "^3.5.1",
     "@tailwindcss/typography": "^0.5.1",
     "axios": "^0.22.0",
     "csv-parse": "^4.16.3",
+    "discord-api-types": "^0.37.14",
+    "discord.js": "^13.9.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "heroicons": "^1.0.4",
