--- a/content/projects.json
+++ b/content/projects.json
@@ -35,9 +35,9 @@
     {
       "name": "Ali Reza",
       "title": "Portfolio",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://i.ibb.co/xFFgTKv/Banner.png",
       "description": "I want to make a Portfolio to show my talents and show what skills I have.",
-      "link": "https://gleaming-marshmallow-fb9096.netlify.app/",
+      "link": "https://stalwart-rabanadas-88bb17.netlify.app/",
       "twitter": "https://twitter.com/Ali_Developer05"
     },
     {
