add Tobo's portfolio image

--- a/content/projects.json
+++ b/content/projects.json
@@ -75,7 +75,7 @@
     {
       "name": "Tobiloba Adedeji",
       "title": "Tobiloba Adedeji",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://i.ibb.co/kx43hT9/toby-portfolio.png",
       "description": "My portfolio website, version 1.0",
       "link": "https://github.com/tobySolutions/tobiloba-portfolio",
       "twitter": "https://twitter.com/toby_solutions"
