--- a/content/projects.json
+++ b/content/projects.json
@@ -41,6 +41,14 @@
       "twitter": "https://twitter.com/Ali_Developer05"
     },
     {
+      "name": "DevvsSakib",
+      "title": "Tesla Web Clone",
+      "screenshot": "https://github.com/devvsakib/tesla-clone/raw/master/public/images/Screenshot_1.png",
+      "description": "A Front-End Projects. Tesla website cloned using reactjs and styled-components.",
+      "link": "https://github.com/devvsakib/tesla-clone",
+      "twitter": "https://twitter.com/devvsakib"
+    },
+    {
       "name": "Akshita Gupta",
       "title": "Face-X",
       "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
