--- a/content/projects.json
+++ b/content/projects.json
@@ -67,7 +67,7 @@
     {
       "name": "Njong Emy",
       "title": "Abbreve",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://images2.imgbox.com/02/5a/8MUFjojh_o.png",
       "description": "Open source dictionary for slang",
       "link": "https://github.com/Njong392/Abbreve",
       "twitter": "https://twitter.com/njong_emy"
