--- a/content/projects.json
+++ b/content/projects.json
@@ -99,7 +99,7 @@
     {
       "name": "Tamal Das",
       "title": "Project Milan",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://repository-images.githubusercontent.com/448605691/1733befc-d033-4816-8e07-4d764d4cabac",
       "description": "A hub for users to collaborate with NGOs and make Earth a better place",
       "link": "https://github.com/IAmTamal/Milan",
       "twitter": "https://twitter.com/mrTamall"
