--- a/content/projects.json
+++ b/content/projects.json
@@ -59,7 +59,7 @@
     {
       "name": "Becca Lyria",
       "title": "Becca Lyria",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://cdn.nhcarrigan.com/banners/becca.png",
       "description": "A community management and moderation bot for Discord.",
       "link": "https://github.com/beccalyria/discord-bot",
       "twitter": "https://twitter.com/becca_lyria"
