--- a/content/projects.json
+++ b/content/projects.json
@@ -83,7 +83,7 @@
     {
       "name": "Yudai H",
       "title": "Yudai Creator Portfolio Website",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://raw.githubusercontent.com/Yudai-creator/Yudai-creator/master/Screenshot%202022-10-30%20at%2015-16-19%20Yudai%20Creator.png",
       "description": "Building my portfolio of porjects, where I going to turn this website into the center point of my brand.",
       "link": "https://github.com/Yudai-creator/yudai-creator-definitive",
       "twitter": "https://twitter.com/creator_yudai"
