--- a/content/projects.json
+++ b/content/projects.json
@@ -37,7 +37,7 @@
       "title": "Portfolio",
       "screenshot": "https://i.ibb.co/xFFgTKv/Banner.png",
       "description": "I want to make a Portfolio to show my talents and show what skills I have.",
-      "link": "https://stalwart-rabanadas-88bb17.netlify.app/",
+      "link": "https://alireza05.netlify.app",
       "twitter": "https://twitter.com/Ali_Developer05"
     },
     {
@@ -109,7 +109,7 @@
       "title": "SpacesLounge",
       "screenshot": "https://i.ibb.co/ZMpDrBM/Spaces-Lounge.png",
       "description": "Twitter Spaces Host and Speaker's Lounge",
-      "link": "https://github.com/avie-dev/spaceslounge",
+      "link": "https://spaceslounge.netlify.app/",
       "twitter": "https://twitter.com/AvieDev"
     },
     {
