--- a/content/projects.json
+++ b/content/projects.json
@@ -43,7 +43,7 @@
     {
       "name": "Akshita Gupta",
       "title": "Face-X",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://github.com/akshitagupta15june/Face-X/blob/master/Cartoonify-Image/logo/Face-X.png",
       "description": "Demonstration of different algorithms and operations on faces.",
       "link": "https://github.com/akshitagupta15june/Face-X",
       "twitter": "https://twitter.com/Akshita_archer"
@@ -51,7 +51,7 @@
     {
       "name": "Krishnansh Agarwal",
       "title": "Library",
-      "screenshot": "https://user-images.githubusercontent.com/18360871/162364470-56cc28da-d50c-426f-82a4-7ea06234d4bf.png",
+      "screenshot": "https://i.postimg.cc/P5mgxvDr/Screenshot-20221101-110821-Chrome.jpg",
       "description": "A basic library management system [only frontend]",
       "link": "https://github.com/krishnanshagarwal112/Library",
       "twitter": "https://twitter.com/KrishnanshDev"
