--- a/content/projects.json
+++ b/content/projects.json
@@ -43,7 +43,7 @@
     {
       "name": "Akshita Gupta",
       "title": "Face-X",
-      "screenshot": "https://github.com/akshitagupta15june/Face-X/blob/master/Cartoonify-Image/logo/Face-X.png",
+      "screenshot": "https://github.com/akshitagupta15june/Face-X/blob/master/Cartoonify-Image/Cartoonify_face_image/Images/recof.gif",
       "description": "Demonstration of different algorithms and operations on faces.",
       "link": "https://github.com/akshitagupta15june/Face-X",
       "twitter": "https://twitter.com/Akshita_archer"
