--- a/content/projects.json
+++ b/content/projects.json
@@ -109,7 +109,7 @@
       "title": "SpacesLounge",
       "screenshot": "https://i.ibb.co/ZMpDrBM/Spaces-Lounge.png",
       "description": "Twitter Spaces Host and Speaker's Lounge",
-      "link": "https://spaceslounge.netlify.app/",
+      "link": "https://spaceslounge.vercel.app/",
       "twitter": "https://twitter.com/AvieDev"
     },
     {
