Added BetterPoll to projects,json

--- a/content/projects.json
+++ b/content/projects.json
@@ -41,6 +41,14 @@
       "twitter": "https://twitter.com/Ali_Developer05"
     },
     {
+      "name": "Aditya Bisht",
+      "title": "BetterPoll",
+      "screenshot": "https://i.postimg.cc/66Z6kmf0/Capture.png",
+      "description": "A complete campus management android app.",
+      "link": "https://github.com/adityabisht02",
+      "twitter": "https://twitter.com/AdityaB35550332"
+    },
+    {
       "name": "Akshita Gupta",
       "title": "Face-X",
       "screenshot": "https://user-images.githubusercontent.com/18360871/199206838-97ebea3b-a413-412c-ab72-ae7763315b31.png",
