--- a/content/projects.json
+++ b/content/projects.json
@@ -75,7 +75,7 @@
     {
       "name": "Becca Lyria",
       "title": "Becca Lyria",
-      "screenshot": "https://cdn.nhcarrigan.com/banners/becca.png",
+      "screenshot": "https://user-images.githubusercontent.com/18360871/201510325-cfd1e1fb-e838-448a-895d-7bc1f492d97c.png",
       "description": "A community management and moderation bot for Discord.",
       "link": "https://github.com/beccalyria/discord-bot",
       "twitter": "https://twitter.com/becca_lyria",
@@ -102,8 +102,8 @@
     {
       "name": "Yudai H",
       "title": "Yudai Creator Portfolio Website",
-      "screenshot": "https://raw.githubusercontent.com/Yudai-creator/Yudai-creator/master/Screenshot%202022-10-30%20at%2015-16-19%20Yudai%20Creator.png",
-      "description": "Building my portfolio of porjects, where I going to turn this website into the center point of my brand.",
+      "screenshot": "https://user-images.githubusercontent.com/18360871/201510239-78ddaa5d-f3d6-4a3b-a88c-d5a2eb324341.png",
+      "description": "Building my portfolio of projects, where I going to turn this website into the center point of my brand.",
       "link": "https://github.com/Yudai-creator/yudai-creator-definitive",
       "twitter": "https://twitter.com/creator_yudai",
       "live_link": "https://yudaicreator.com"
@@ -120,7 +120,7 @@
     {
       "name": "Tamal Das",
       "title": "Project Milan",
-      "screenshot": "https://repository-images.githubusercontent.com/448605691/1733befc-d033-4816-8e07-4d764d4cabac",
+      "screenshot": "https://user-images.githubusercontent.com/18360871/201510488-73feeba6-b08c-42a0-a985-e8f159eaa869.png",
       "description": "A hub for users to collaborate with NGOs and make Earth a better place",
       "link": "https://github.com/IAmTamal/Milan",
       "twitter": "https://twitter.com/mrTamall",
