Fixed BetterPoll project's github link

--- a/content/projects.json
+++ b/content/projects.json
@@ -45,7 +45,7 @@
       "title": "BetterPoll",
       "screenshot": "https://i.postimg.cc/66Z6kmf0/Capture.png",
       "description": "A complete campus management android app.",
-      "link": "https://github.com/adityabisht02",
+      "link": "https://github.com/adityabisht02/BetterPoll-Android",
       "twitter": "https://twitter.com/AdityaB35550332"
     },
     {
