feat: reduced the image file size

--- a/content/projects.json
+++ b/content/projects.json
@@ -147,7 +147,7 @@
      {
       "name": "Ibrahim",
       "title": "Free Frontend Resources",
-      "screenshot": "https://i.ibb.co/jkcw29S/banner.png",
+      "screenshot": "https://i.ibb.co/ysBfwq9/banner.jpg",
       "description": "Free Resources and Tools For Frontend Developers",
       "link": "https://github.com/ibrahimraimi/free-frontend-resources",
       "twitter": "https://twitter.com/ibrahimraimi_",
