--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.1",
     "axios": "^0.22.0",
+    "classnames": "^2.3.2",
     "csv-parse": "^4.16.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
