--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.6",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.0.18"
   },
   "version": "0.8.0"
