--- a/.github/ISSUE_TEMPLATE/features.yml
+++ b/.github/ISSUE_TEMPLATE/features.yml
@@ -1,7 +1,7 @@
 name: 💡 General Feature Request
 description: Have a new idea/feature for the website? Please suggest!
-title: '[FEATURE] <description>'
-labels: ['feature']
+title: "[FEATURE] <description>"
+labels: ["feature"]
 body:
   - type: textarea
     id: description
