--- a/content/projects.json
+++ b/content/projects.json
@@ -7,7 +7,8 @@
       "description": "A list of resources to learn Web3 for FREE",
       "link": "https://github.com/FrancescoXX/free-Web3-resources",
       "twitter": "https://twitter.com/FrancescoCiull4",
-      "live_link": "https://www.freeweb3resources.com"
+      "live_link": "https://www.freeweb3resources.com",
+      "stack": ["React", "CSS", "Solidity"]
     },
     {
       "name": "Pradumna Saraf",
@@ -16,7 +17,8 @@
       "description": "Contains resources to learn about Open Source, Git, and GitHub.",
       "link": "https://github.com/Pradumnasaraf/open-source-with-pradumna",
       "twitter": "https://twitter.com/pradumna_saraf",
-      "live_link": "https://oswp.study/#/"
+      "live_link": "https://oswp.study/#/",
+      "stack": ["Markdown", "HTML", "CSS", "Docker"]
     },
     {
       "name": "Susmita Dey",
@@ -25,7 +27,8 @@
       "description": "The one step solution to get relief from your stress. Live a stress-free life by using this website.",
       "link": "https://github.com/Susmita-Dey/Sukoon",
       "twitter": "https://twitter.com/its_SusmitaDey",
-      "live_link": "https://sukoon-stress-free.netlify.app/"
+      "live_link": "https://sukoon-stress-free.netlify.app/",
+      "stack": ["HTML", "CSS", "JS"]
     },
     {
       "name": "thegeekyb0y",
@@ -34,7 +37,8 @@
       "description": "Compiled list of Free resources to learn Python",
       "link": "https://github.com/thegeekyb0y/learnpython",
       "twitter": "https://twitter.com/thegeekyb0y",
-      "live_link": ""
+      "live_link": "",
+      "stack": ["Markdown"]
     },
     {
       "name": "Ali Reza",
@@ -43,7 +47,8 @@
       "description": "I want to make a Portfolio to show my talents and show what skills I have.",
       "link": "https://github.com/AliReza1083/Portfolio",
       "twitter": "https://twitter.com/Ali_Developer05",
-      "live_link": "https://alireza05.netlify.app"
+      "live_link": "https://alireza05.netlify.app",
+      "stack": ["React", "Material UI", "SCSS"]
     },
     {
       "name": "Aditya Bisht",
@@ -52,7 +57,8 @@
       "description": "A complete campus management android app.",
       "link": "https://github.com/adityabisht02/BetterPoll-Android",
       "twitter": "https://twitter.com/AdityaB35550332",
-      "live_link": ""
+      "live_link": "",
+      "stack": ["Java"]
     },
     {
       "name": "Akshita Gupta",
@@ -61,7 +67,8 @@
       "description": "Demonstration of different algorithms and operations on faces.",
       "link": "https://github.com/akshitagupta15june/Face-X",
       "twitter": "https://twitter.com/Akshita_archer",
-      "live_link": "https://www.youtube.com/watch?v=VK-IaRY9szg"
+      "live_link": "https://www.youtube.com/watch?v=VK-IaRY9szg",
+      "stack": ["Python"]
     },
     {
       "name": "Krishnansh Agarwal",
@@ -70,7 +77,8 @@
       "description": "A basic library management system [only frontend]",
       "link": "https://github.com/krishnanshagarwal112/Library",
       "twitter": "https://twitter.com/KrishnanshDev",
-      "live_link": ""
+      "live_link": "",
+      "stack": ["HTML", "CSS", "JS"]
     },
     {
       "name": "Becca Lyria",
@@ -79,7 +87,8 @@
       "description": "A community management and moderation bot for Discord.",
       "link": "https://github.com/beccalyria/discord-bot",
       "twitter": "https://twitter.com/becca_lyria",
-      "live_link": "https://www.beccalyria.com"
+      "live_link": "https://www.beccalyria.com",
+      "stack": ["Typescript"]
     },
     {
       "name": "Njong Emy",
@@ -88,7 +97,8 @@
       "description": "Open source dictionary for slang",
       "link": "https://github.com/Njong392/Abbreve",
       "twitter": "https://twitter.com/njong_emy",
-      "live_link": "https://www.abbreve.tech"
+      "live_link": "https://www.abbreve.tech",
+      "stack": ["React", "Tailwind"]
     },
     {
       "name": "Tobiloba Adedeji",
@@ -97,7 +107,8 @@
       "description": "My portfolio website, version 1.0",
       "link": "https://github.com/tobySolutions/tobiloba-portfolio",
       "twitter": "https://twitter.com/toby_solutions",
-      "live_link": ""
+      "live_link": "",
+      "stack": ["React", "Tailwind"]
     },
     {
       "name": "Yudai H",
@@ -106,7 +117,8 @@
       "description": "Building my portfolio of projects, where I going to turn this website into the center point of my brand.",
       "link": "https://github.com/Yudai-creator/yudai-creator-definitive",
       "twitter": "https://twitter.com/creator_yudai",
-      "live_link": "https://yudaicreator.com"
+      "live_link": "https://yudaicreator.com",
+      "stack": ["Nuxt", "Vue", "SCSS"]
     },
     {
       "name": "Dunsin",
@@ -115,7 +127,8 @@
       "description": "Get short css code you can use in your applications",
       "link": "https://github.com/Dun-sin/Code-Magic",
       "twitter": "https://twitter.com/DunsinWebDev",
-      "live_link": "https://code-magic.vercel.app"
+      "live_link": "https://code-magic.vercel.app",
+      "stack": ["Typescript"]
     },
     {
       "name": "Tamal Das",
@@ -124,7 +137,8 @@
       "description": "A hub for users to collaborate with NGOs and make Earth a better place",
       "link": "https://github.com/IAmTamal/Milan",
       "twitter": "https://twitter.com/mrTamall",
-      "live_link": "https://milaan.vercel.app"
+      "live_link": "https://milaan.vercel.app",
+      "stack": ["Mongo", "Express", "React"]
     },
     {
       "name": "Avie",
@@ -133,7 +147,8 @@
       "description": "Twitter Spaces Host and Speaker's Lounge",
       "link": "https://github.com/avie-dev/spaceslounge",
       "twitter": "https://twitter.com/AvieDev",
-      "live_link": "https://spaceslounge.vercel.app"
+      "live_link": "https://spaceslounge.vercel.app",
+      "stack": ["NextJS", "Tailwind"]
     },
     {
       "name": "J S Vignesh Kanna",
@@ -142,7 +157,8 @@
       "description": "An opensource tailwindCSS UI component collection",
       "link": "https://github.com/jsvigneshkanna/tailwind_ui_components",
       "twitter": "https://twitter.com/jsvigneshkanna",
-      "live_link": "https://tailwindcsscomponents.vercel.app"
+      "live_link": "https://tailwindcsscomponents.vercel.app",
+      "stack": ["NextJS", "Tailwind"]
     },
     {
       "name": "Ibrahim",
@@ -151,7 +167,8 @@
       "description": "Free Resources and Tools For Frontend Developers",
       "link": "https://github.com/ibrahimraimi/free-frontend-resources",
       "twitter": "https://twitter.com/ibrahimraimi_",
-      "live_link": ""
+      "live_link": "",
+      "stack": ["Markdown"]
     },
     {
       "name": "Mahesh Kasbe",
@@ -160,7 +177,8 @@
       "description": "Browser Based Kubernetes Real Time Monitoring Tool",
       "link": "https://github.com/Mahesh-Kasabe/K-Dash",
       "twitter": "https://twitter.com/maheshstwt",
-      "live_link": "https://youtu.be/0oRW_ZetXoc"
+      "live_link": "https://youtu.be/0oRW_ZetXoc",
+      "stack": ["Kubernetes", "React"]
     }
   ]
 }
