--- a/content/projects.json
+++ b/content/projects.json
@@ -161,6 +161,15 @@
       "link": "https://github.com/Mahesh-Kasabe/K-Dash",
       "twitter": "https://twitter.com/maheshstwt",
       "live_link": "https://youtu.be/0oRW_ZetXoc"
+    },
+    {
+      "name": "Soumyadeep Das Bhowmick",
+      "title": "Santa-Funda",
+      "screenshot": "https://user-images.githubusercontent.com/115442240/209467798-119208fc-8e13-47d3-bee8-23bc86370433.png"
+      "description": "Christmas Wishing Site",
+      "link": "https://github.com/SoumyadeepOSD/Christmas-Gift",
+      "twitter": "https://twitter.com/SoumyadeepDasB6",
+      "live_link": "https://soumyadeeposd.github.io/Christmas-Gift/"
     }
   ]
 }
