--- a/content/projects.json
+++ b/content/projects.json
@@ -161,6 +161,15 @@
       "link": "https://github.com/Mahesh-Kasabe/K-Dash",
       "twitter": "https://twitter.com/maheshstwt",
       "live_link": "https://youtu.be/0oRW_ZetXoc"
+    },
+    {
+      "name": "Soumyadeep Das Bhowmick",
+      "title": "Santa-Funda",
+      "screenshot": "https://user-images.githubusercontent.com/115442240/209482401-d4a57d6d-0b71-4b9b-8a36-8942ec2c87b8.png",
+      "description": "Wish your friend via this site",
+      "link": "https://github.com/SoumyadeepOSD/Christmas-Gift/tree/master",
+      "twitter": "https://twitter.com/SoumyadeepDasB6",
+      "live_link": "https://soumyadeeposd.github.io/Christmas-Gift/"
     }
   ]
 }
