--- a/content/projects.json
+++ b/content/projects.json
@@ -28,6 +28,15 @@
       "live_link": "https://sukoon-stress-free.netlify.app/"
     },
     {
+      "name": "Siddharth Shyniben",
+      "title": "req",
+      "screenshot": "https://raw.githubusercontent.com/SiddharthShyniben/req/main/img/req.png",
+      "description": "req is a lightweight, minimal yet powerful HTTP client slash API testing tool designed for speed.",
+      "link": "https://github.com/SiddharthShyniben/req",
+      "twitter": "https://twitter.com/SiddharthShyn",
+      "live_link": ""
+    },
+    {
       "name": "thegeekyb0y",
       "title": "FREE Python Resources",
       "screenshot": "https://user-images.githubusercontent.com/18360871/199207091-a66dac6a-4397-4142-af56-87c941f9e1e3.png",
