--- a/content/projects.json
+++ b/content/projects.json
@@ -7,8 +7,7 @@
       "description": "A list of resources to learn Web3 for FREE",
       "link": "https://github.com/FrancescoXX/free-Web3-resources",
       "twitter": "https://twitter.com/FrancescoCiull4",
-      "live_link": "https://www.freeweb3resources.com",
-      "stack": ["All", "React", "CSS", "Others"]
+      "live_link": "https://www.freeweb3resources.com"
     },
     {
       "name": "Pradumna Saraf",
@@ -17,8 +16,7 @@
       "description": "Contains resources to learn about Open Source, Git, and GitHub.",
       "link": "https://github.com/Pradumnasaraf/open-source-with-pradumna",
       "twitter": "https://twitter.com/pradumna_saraf",
-      "live_link": "https://oswp.study/#/",
-      "stack": ["All", "Markdown", "HTML", "CSS", "Others"]
+      "live_link": "https://oswp.study/#/"
     },
     {
       "name": "Susmita Dey",
@@ -27,8 +25,7 @@
       "description": "The one step solution to get relief from your stress. Live a stress-free life by using this website.",
       "link": "https://github.com/Susmita-Dey/Sukoon",
       "twitter": "https://twitter.com/its_SusmitaDey",
-      "live_link": "https://sukoon-stress-free.netlify.app/",
-      "stack": ["All", "HTML", "CSS", "JS/TS"]
+      "live_link": "https://sukoon-stress-free.netlify.app/"
     },
     {
       "name": "thegeekyb0y",
@@ -37,8 +34,7 @@
       "description": "Compiled list of Free resources to learn Python",
       "link": "https://github.com/thegeekyb0y/learnpython",
       "twitter": "https://twitter.com/thegeekyb0y",
-      "live_link": "",
-      "stack": ["All", "Markdown"]
+      "live_link": ""
     },
     {
       "name": "Ali Reza",
@@ -47,8 +43,7 @@
       "description": "I want to make a Portfolio to show my talents and show what skills I have.",
       "link": "https://github.com/AliReza1083/Portfolio",
       "twitter": "https://twitter.com/Ali_Developer05",
-      "live_link": "https://alireza05.netlify.app",
-      "stack": ["All", "React", "CSS", "Others"]
+      "live_link": "https://alireza05.netlify.app"
     },
     {
       "name": "Aditya Bisht",
@@ -57,8 +52,7 @@
       "description": "A complete campus management android app.",
       "link": "https://github.com/adityabisht02/BetterPoll-Android",
       "twitter": "https://twitter.com/AdityaB35550332",
-      "live_link": "",
-      "stack": ["All", "Others"]
+      "live_link": ""
     },
     {
       "name": "Akshita Gupta",
@@ -67,8 +61,7 @@
       "description": "Demonstration of different algorithms and operations on faces.",
       "link": "https://github.com/akshitagupta15june/Face-X",
       "twitter": "https://twitter.com/Akshita_archer",
-      "live_link": "https://www.youtube.com/watch?v=VK-IaRY9szg",
-      "stack": ["All", "Others"]
+      "live_link": "https://www.youtube.com/watch?v=VK-IaRY9szg"
     },
     {
       "name": "Krishnansh Agarwal",
@@ -77,8 +70,7 @@
       "description": "A basic library management system [only frontend]",
       "link": "https://github.com/krishnanshagarwal112/Library",
       "twitter": "https://twitter.com/KrishnanshDev",
-      "live_link": "",
-      "stack": ["All", "HTML", "CSS", "JS/TS"]
+      "live_link": ""
     },
     {
       "name": "Becca Lyria",
@@ -87,8 +79,7 @@
       "description": "A community management and moderation bot for Discord.",
       "link": "https://github.com/beccalyria/discord-bot",
       "twitter": "https://twitter.com/becca_lyria",
-      "live_link": "https://www.beccalyria.com",
-      "stack": ["All", "JS/TS"]
+      "live_link": "https://www.beccalyria.com"
     },
     {
       "name": "Njong Emy",
@@ -97,8 +88,7 @@
       "description": "Open source dictionary for slang",
       "link": "https://github.com/Njong392/Abbreve",
       "twitter": "https://twitter.com/njong_emy",
-      "live_link": "https://www.abbreve.tech",
-      "stack": ["All", "React", "Tailwind"]
+      "live_link": "https://www.abbreve.tech"
     },
     {
       "name": "Tobiloba Adedeji",
@@ -107,8 +97,7 @@
       "description": "My portfolio website, version 1.0",
       "link": "https://github.com/tobySolutions/tobiloba-portfolio",
       "twitter": "https://twitter.com/toby_solutions",
-      "live_link": "",
-      "stack": ["All", "React", "Tailwind"]
+      "live_link": ""
     },
     {
       "name": "Yudai H",
@@ -117,8 +106,7 @@
       "description": "Building my portfolio of projects, where I going to turn this website into the center point of my brand.",
       "link": "https://github.com/Yudai-creator/yudai-creator-definitive",
       "twitter": "https://twitter.com/creator_yudai",
-      "live_link": "https://yudaicreator.com",
-      "stack": ["All", "Others"]
+      "live_link": "https://yudaicreator.com"
     },
     {
       "name": "Dunsin",
@@ -127,8 +115,7 @@
       "description": "Get short css code you can use in your applications",
       "link": "https://github.com/Dun-sin/Code-Magic",
       "twitter": "https://twitter.com/DunsinWebDev",
-      "live_link": "https://code-magic.vercel.app",
-      "stack": ["All", "JS/TS"]
+      "live_link": "https://code-magic.vercel.app"
     },
     {
       "name": "Tamal Das",
@@ -137,8 +124,7 @@
       "description": "A hub for users to collaborate with NGOs and make Earth a better place",
       "link": "https://github.com/IAmTamal/Milan",
       "twitter": "https://twitter.com/mrTamall",
-      "live_link": "https://milaan.vercel.app",
-      "stack": ["All", "React", "Others"]
+      "live_link": "https://milaan.vercel.app"
     },
     {
       "name": "Avie",
@@ -147,8 +133,7 @@
       "description": "Twitter Spaces Host and Speaker's Lounge",
       "link": "https://github.com/avie-dev/spaceslounge",
       "twitter": "https://twitter.com/AvieDev",
-      "live_link": "https://spaceslounge.vercel.app",
-      "stack": ["All", "Tailwind", "Next"]
+      "live_link": "https://spaceslounge.vercel.app"
     },
     {
       "name": "J S Vignesh Kanna",
@@ -157,8 +142,7 @@
       "description": "An opensource tailwindCSS UI component collection",
       "link": "https://github.com/jsvigneshkanna/tailwind_ui_components",
       "twitter": "https://twitter.com/jsvigneshkanna",
-      "live_link": "https://tailwindcsscomponents.vercel.app",
-      "stack": ["All", "Tailwind", "Next"]
+      "live_link": "https://tailwindcsscomponents.vercel.app"
     },
     {
       "name": "Ibrahim",
@@ -167,8 +151,7 @@
       "description": "Free Resources and Tools For Frontend Developers",
       "link": "https://github.com/ibrahimraimi/free-frontend-resources",
       "twitter": "https://twitter.com/ibrahimraimi_",
-      "live_link": "",
-      "stack": ["All", "Markdown"]
+      "live_link": ""
     },
     {
       "name": "Mahesh Kasbe",
@@ -177,8 +160,16 @@
       "description": "Browser Based Kubernetes Real Time Monitoring Tool",
       "link": "https://github.com/Mahesh-Kasabe/K-Dash",
       "twitter": "https://twitter.com/maheshstwt",
-      "live_link": "https://youtu.be/0oRW_ZetXoc",
-      "stack": ["All", "React"]
+      "live_link": "https://youtu.be/0oRW_ZetXoc"
+    },
+    {
+      "name": "Soumyadeep Das Bhowmick",
+      "title": "Santa-Funda",
+      "screenshot": "https://user-images.githubusercontent.com/115442240/209482401-d4a57d6d-0b71-4b9b-8a36-8942ec2c87b8.png",
+      "description": "Wish your friend via this site",
+      "link": "https://github.com/SoumyadeepOSD/Christmas-Gift/tree/master",
+      "twitter": "https://twitter.com/SoumyadeepDasB6",
+      "live_link": "https://soumyadeeposd.github.io/Christmas-Gift/"
     }
   ]
 }
