--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "heroicons": "^1.0.4",
-    "next": "^11.1.2",
+    "next": "^13.0.0",
     "next-pwa": "^5.3.1",
     "next-seo": "^4.28.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-toastify": "^8.0.3",
     "react-youtube": "^10.0.0",
@@ -52,5 +52,9 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.0.18"
   },
-  "version": "0.9.0"
+  "version": "0.9.0",
+  "name": "4c-site",
+  "main": "index.js",
+  "author": "epicadidash <dradwaitdash@gmail.com>",
+  "license": "MIT"
 }
