--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,8 @@
     "node": true
   },
   "parser": "babel-eslint",
-  "extends": ["eslint:recommended", "plugin:tailwind/recommended"],
-  "plugins": ["react"],
+  "extends": ["eslint:recommended", "plugin:tailwindcss/recommended"],
+  "plugins": ["react","tailwindcss"],
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
@@ -18,6 +18,7 @@
     "no-console": ["warn"],
     "no-nested-ternary": 0,
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "tailwindcss/no-custom-classname": "off"
   }
 }
