--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-tailwind": "^0.2.1",
+    "eslint-plugin-tailwindcss": "^3.8.0",
     "husky": "^7.0.2",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
