--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "heroicons": "^1.0.4",
+    "multiselect-react-dropdown": "^2.0.25",
     "next": "^11.1.2",
     "next-pwa": "^5.3.1",
     "next-seo": "^4.28.1",
