--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "axios": "^0.22.0",
     "classnames": "^2.3.2",
     "csv-parse": "^4.16.3",
+    "eslint-plugin-tailwindcss": "^3.8.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "heroicons": "^1.0.4",
     "multiselect-react-dropdown": "^2.0.25",
-    "next": "^11.1.2",
+    "next": "^13.0.0",
     "next-pwa": "^5.3.1",
     "next-seo": "^4.28.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-toastify": "^8.0.3",
     "react-youtube": "^10.0.0",
@@ -44,7 +45,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-tailwindcss": "^3.8.0",
     "husky": "^7.0.2",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
@@ -53,5 +53,9 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.0.18"
   },
-  "version": "0.9.0"
+  "version": "0.9.0",
+  "name": "4c-site",
+  "main": "index.js",
+  "author": "epicadidash <dradwaitdash@gmail.com>",
+  "license": "MIT"
 }
