--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,8 @@
     "node": true
   },
   "parser": "babel-eslint",
-  "extends": ["eslint:recommended", "plugin:tailwindcss/recommended"],
-  "plugins": ["react","tailwindcss"],
+  "extends": ["eslint:recommended", "plugin:tailwindcss/recommended","plugin:jsx-a11y/recommended"],
+  "plugins": ["react","tailwindcss","jsx-a11y"],
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
