--- a/content/projects.json
+++ b/content/projects.json
@@ -179,6 +179,16 @@
       "twitter": "https://twitter.com/maheshstwt",
       "live_link": "https://youtu.be/0oRW_ZetXoc",
       "stack": ["All", "React"]
+    },
+    {
+      "name": "Letam",
+      "title": "Letam",
+      "screenshot": "https://i.ibb.co/Lz0P8bt/Screenshot-127.png",
+      "description": "My portfolio website",
+      "link": "https://github.com/Yagazie-davidson/Portfolio",
+      "twitter": "https://twitter.com/LetamDavidson",
+      "live_link": "",
+      "stack": ["All", "React"]
     }
   ]
 }
