--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,8 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - name: npm
-    init: npm install
-    command: npm run dev
+  - name: Development Server
+    init: yarn install
+    command: yarn dev
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
