--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -262,6 +262,15 @@
         "All",
         "React"
       ]
+    },
+    {
+      "name": "Soumyadeep Das Bhowmick",
+      "title": "Santa-Funda",
+      "screenshot": "https://user-images.githubusercontent.com/115442240/209482401-d4a57d6d-0b71-4b9b-8a36-8942ec2c87b8.png",
+      "description": "Wish your friend via this site",
+      "link": "https://github.com/SoumyadeepOSD/Christmas-Gift/tree/master",
+      "twitter": "https://twitter.com/SoumyadeepDasB6",
+      "live_link": "https://soumyadeeposd.github.io/Christmas-Gift/"
     }
   ]
 }
