--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
+    "azelf": "^1.1.0",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "framer-motion": "^8.1.4",
     "multiselect-react-dropdown": "^2.0.25",
     "next": "^13.1.1",
-    "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
