--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -271,6 +271,15 @@
       "link": "https://github.com/SoumyadeepOSD/Christmas-Gift/tree/master",
       "twitter": "https://twitter.com/SoumyadeepDasB6",
       "live_link": "https://soumyadeeposd.github.io/Christmas-Gift/"
+    },
+    {
+      "name": "Ellams A George",
+      "title": "Ellams George",
+      "screenshot": "https://avatars.githubusercontent.com/u/103334963?v=4",
+      "description": "Ellams portfolio v2.0",
+      "link": "https://github.com/Ellamsg/folio2",
+      "twitter": "https://twitter.com/ellamsgeorge1",
+      "live_link": "https://ellamsfolio.netlify.app/"
     }
   ]
 }
