--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -273,7 +273,7 @@
       "live_link": "https://soumyadeeposd.github.io/Christmas-Gift/"
     },
     {
-      "name": "Ellams A George",
+      "name": "Ellams George",
       "title": "Ellams George",
       "screenshot": "https://avatars.githubusercontent.com/u/103334963?v=4",
       "description": "Ellams portfolio v2.0",
