style: activities card design imrpoved and responsive for all device activities card design imrpoved and responsive for all device

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
   "eslint.enable": true,
   "editor.formatOnSave": false,
-  "eslint.validate": ["javascript", "javascriptreact", "json"]
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "json"
+  ],
+  "githubPullRequests.ignoredPullRequestBranches": [
+    "main"
+  ]
 }
