--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
-blank_issues_enabled: false
-contact_links:
-  - name: 4C Discussions
-    url: https://github.com/FrancescoXX/4c-site/discussions
-    about: Please ask and answer questions here.
-  - name: Discord Community
-    url: https://4c.rocks/join
-    about: Join 4C Community, here
+# blank_issues_enabled: false
+# contact_links:
+#   - name: 4C Discussions
+#     url: https://github.com/FrancescoXX/4c-site/discussions
+#     about: Please ask and answer questions here.
+#   - name: Discord Community
+#     url: https://4c.rocks/join
+#     about: Join 4C Community, here
