--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -234,7 +234,7 @@
       "live_link": "https://frontend-dev-resources.vercel.app/",
       "stack": [
         "All",
-        "Next,
+        "Next",
         "Markdown"
       ]
     },
