--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -47,6 +47,7 @@ body:
 - type: textarea
     attributes:
       label: Call to Action
-      value: | To Commit on this project you should use `npm run commit`. Do not use `git commit` to avoid unwanted issues
+      value: | 
+        To Commit on this project you should use `npm run commit`. Do not use `git commit` to avoid unwanted issues
     validations:
       required: true
